--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -14,7 +14,7 @@
                 SemanticProperties.Description="dot net bot in a race car number eight" />
 
             <Label
-                Text="Hello, World! I discover git is so hard"
+                Text="Hello, World! I discover git is so hard, now I know how is avaible"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
